New argline for the Maven Assembly plugin to fix the Java Heap space issues